# esp32s3-idf

./: .editorconfig  .gitignore  AGENTS.md  README.md  REDME.md
.claude/: settings.local.json
01_led/: CMakeLists.txt  README.md
01_led/components/BSP/: CMakeLists.txt
01_led/components/BSP/LED/: led.c
01_led/main/: main.c
02_key/: .clang-format  CMakeLists.txt  README.md
02_key/components/BSP/: CMakeLists.txt
02_key/components/BSP/KEY/: key.c  key.h
02_key/components/BSP/LED/: led.h
02_key/main/: main.c
03_exit/: CMakeLists.txt  README.md
03_exit/components/BSP/: CMakeLists.txt
03_exit/components/BSP/EXIT/: exit.c  exit.h
03_exit/main/: main.c
04_uart/: CMakeLists.txt  README.md
04_uart/.claude/: settings.local.json
04_uart/components/BSP/: CMakeLists.txt
04_uart/components/BSP/UART/: uart.c  uart.h
04_uart/main/: main.c
05_esptimer/: README.md
05_esptimer/components/BSP/: CMakeLists.txt
05_esptimer/components/BSP/ESPTIMER/: esptimer.c  esptimer.h
05_esptimer/components/BSP/LED/: led.c
05_esptimer/main/: main.c
06_gptimer/: README.md
06_gptimer/components/BSP/: CMakeLists.txt
06_gptimer/components/BSP/GPTIMER/: gptimer.c  gptimer.h
06_gptimer/main/: main.c
07_ledc/: README.md
07_ledc/components/BSP/: CMakeLists.txt
07_ledc/components/BSP/LEDC/: ledc.c  ledc.h
07_ledc/main/: main.c
08_iic/: README.md
08_iic/components/BSP/: CMakeLists.txt
08_iic/components/BSP/IIC/: iic.c
08_iic/components/BSP/XL9555/: xl9555.c
08_iic/main/: main.c
09_iic_eeprom/components/BSP/: CMakeLists.txt
09_iic_eeprom/components/BSP/24CXX/: 24cxx.c  24cxx.h
09_iic_eeprom/main/: main.c
10_spi_lcd/: README.md
10_spi_lcd/components/BSP/: CMakeLists.txt
10_spi_lcd/main/: main.c
10_spilcd/: CMakeLists.txt  README.md  sdkconfig
10_spilcd/main/: main.c
11_adc/: README.md
11_adc/components/BSP/: CMakeLists.txt
11_adc/main/: main.c
12_infrared/: README.md
12_infrared/components/BSP/: CMakeLists.txt
12_infrared/main/: main.c
13_wifi_scan/: README.md
13_wifi_scan/components/BSP/: CMakeLists.txt
13_wifi_scan/main/: main.c
14_chinese_all/components/BSP/: CMakeLists.txt
14_chinese_all/components/BSP/IIC/: iic.h
14_chinese_all/components/BSP/LCD/: lcdfont.h
14_chinese_all/components/BSP/SPI/: spi.c
14_chinese_all/components/BSP/XL9555/: xl9555.h
14_chinese_all/main/: main.c
14_spi_lcd_hanzi/: CLAUDE.md  README.md
14_spi_lcd_hanzi/main/: main.c
15_chinese_3k/: CLAUDE.md  README.md
15_chinese_3k/components/BSP/: CMakeLists.txt
15_chinese_3k/main/: main.c
16_wifi_scan_chinese/: .clang-format
17_wifi_station/: README.md
17_wifi_station/main/: main.c
18_wifi_ap/: .clang-format  README.md
18_wifi_ap/.claude/: settings.local.json
18_wifi_ap/main/: main.c
19_wifi_auto_esptouch/: README.md  c-esptouch.md
19_wifi_auto_esptouch/.claude/: settings.local.json
19_wifi_auto_esptouch/components/BSP/: CMakeLists.txt
19_wifi_auto_esptouch/components/BSP/KEY/: key.h
19_wifi_auto_esptouch/components/BSP/LED/: led.c
19_wifi_auto_esptouch/components/BSP/MYIIC/: myiic.c
19_wifi_auto_esptouch/components/BSP/MYSPI/: my_spi.c  my_spi.h
19_wifi_auto_esptouch/components/BSP/MYWIFI/: my_wifi.c  my_wifi.h
19_wifi_auto_esptouch/main/: CMakeLists.txt  main.c
20_wifi_auto_qrcode/: README.md  sdkconfig
20_wifi_auto_qrcode/components/BSP/: CMakeLists.txt
20_wifi_auto_qrcode/main/: main.c
21_ble_led/: README.md
22_qrcode/: README.md  fix-qrcode.md  opencode-ctx.md
22_qrcode/.claude/: settings.local.json
22_qrcode/components/BSP/: CMakeLists.txt
22_qrcode/main/: main.c
code_diff/: README.md  comparator.py  pyproject.toml  vscode_diff.py
code_diff/scripts/: chinese_unicode.txt  generate_chinese.py
docs/: compare-01-03-05.md
scripts/3k_chinese_gen/: 1_format_16_per_line.py  2_generate_chinese_3k.py  chinese_3k.txt  chinese_3k_unicode.txt  t.py
scripts/all_chinese_gen/: 1_generate_chinese.py
scripts/code_diff/: .clang-format  .gitignore  README.md  ast_analyzer.py  call_graph.py  code_regenerator.py  config.yaml  diff_visualizer.py  package-lock.json  setup_tree_sitter.py
scripts/code_diff/src/: parser.c
(+33 files in other folders)
