set(src_dirs
        LED
        LCD
        CHINESE16
        IIC
        XL9555
        SPI
)
set(include_dirs
        LED
        LCD
        CHINESE16
        IIC
        XL9555
        SPI
)

set(requires
        driver
)

idf_component_register(SRC_DIRS ${src_dirs} INCLUDE_DIRS ${include_dirs} REQUIRES ${requires})

component_compile_options(-ffast-math -O3 -Wno-error=format=-Wno-format)
